--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "packages/*"
   ],
   "scripts": {
-    "dev": "cd packages/documentation && bun run dev"
+    "dev:types": "cd packages/types && bun run build && bun run types && clear",
+    "dev:components": "cd packages/components && bun run build && bun run types && clear",
+    "dev:documentation": "cd packages/documentation && bun run dev"
   },
   "devDependencies": {
     "@arkyn/components": "workspace:*",
