--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -18,6 +18,7 @@
     "vite": "^5.1.4"
   },
   "peerDependencies": {
+    "@arkyn/types": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "lucide-react": "^0.341.0"
