--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -11,16 +11,17 @@
     "version": "bunx version patch"
   },
   "devDependencies": {
-    "@types/react": "^18.2.62",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
     "bun-types": "latest",
-    "typescript": "^5.3.3",
+    "typescript": "^5.4.2",
     "vite": "^5.1.5"
   },
   "peerDependencies": {
     "@arkyn/types": "workspace:*",
+    "lucide-react": "^0.344.0",
+    "framer-motion": "^11.0.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "lucide-react": "^0.344.0"
+    "react-dom": "^18.2.0"
   }
 }
