--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -18,15 +18,16 @@
     "@remix-run/node": "^2.8.0",
     "@remix-run/react": "^2.8.0",
     "@remix-run/serve": "^2.8.0",
+    "framer-motion": "^11.0.8",
     "isbot": "^5.1.1",
-    "lucide-react": "^0.344.0",
+    "lucide-react": "^0.349.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.0",
-    "@types/react": "^18.2.62",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@wyw-in-js/vite": "^0.5.0",
     "eslint": "^8.57.0",
@@ -35,7 +36,8 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "typescript": "^5.3.3",
+    "remix-development-tools": "^3.7.4",
+    "typescript": "^5.4.2",
     "vite": "^5.1.5",
     "vite-tsconfig-paths": "^4.3.1"
   },
