feat: update all packages, correction in documentation eslint

--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
     "dev:types": "cd packages/types && bun run build && bun run types && clear",
     "dev:components": "cd packages/components && bun run build && bun run types && clear",
     "dev:documentation": "cd packages/documentation && bun run dev"
+  },
+  "devDependencies": {
+    "@arkyn/components": "workspace:*",
+    "@arkyn/types": "workspace:*"
   }
 }
