--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -11,14 +11,13 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@arkyn/components": "workspace:*",
+    "@arkyn/component": "workspace:*",
     "@arkyn/types": "workspace:*",
     "@linaria/core": "^6.1.0",
     "@linaria/react": "^6.1.0",
     "@remix-run/node": "^2.8.0",
     "@remix-run/react": "^2.8.0",
     "@remix-run/serve": "^2.8.0",
-    "framer-motion": "^11.0.8",
     "isbot": "^5.1.1",
     "lucide-react": "^0.349.0",
     "react": "^18.2.0",
