--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -11,14 +11,13 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@arkyn/component": "workspace:*",
+    "@arkyn/components": "workspace:*",
     "@arkyn/types": "workspace:*",
     "@linaria/core": "^6.1.0",
     "@linaria/react": "^6.1.0",
     "@remix-run/node": "^2.8.0",
     "@remix-run/react": "^2.8.0",
     "@remix-run/serve": "^2.8.0",
-    "@wyw-in-js/vite": "^0.5.0",
     "isbot": "^5.1.1",
     "lucide-react": "^0.349.0",
     "react": "^18.2.0",
@@ -29,6 +28,7 @@
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@wyw-in-js/vite": "^0.5.0",
     "eslint": "^8.57.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
