--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -18,6 +18,7 @@
     "vite": "^5.1.5"
   },
   "peerDependencies": {
+    "@remix-run/react": "^2.8.0",
     "lucide-react": "^0.349.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
