--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.349.0",
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4"
   }
 }
