--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -30,6 +30,7 @@
     "@remix-run/dev": "^2.8.1",
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
+    "@types/react-input-mask": "^3.0.5",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@wyw-in-js/vite": "^0.5.0",
     "eslint": "^8.57.0",
