--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -24,12 +24,14 @@
     "lucide-react": "^0.363.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.1",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.22",
+    "@types/react-scroll": "^1.8.10",
     "@types/react-input-mask": "^3.0.5",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@wyw-in-js/vite": "^0.5.0",
