chore: create utils package, add verbatimModuleSyntax=true in packages

--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "devDependencies": {
     "@arkyn/components": "workspace:*",
     "@arkyn/types": "workspace:*",
+    "@arkyn/utils": "workspace:*",
     "@flydotio/dockerfile": "latest"
   },
   "scripts": {
-    "all:update-packages": "cd packages/types && ncu -u && cd ../components && ncu -u && cd ../documentation && ncu -u && bun i",
+    "all:update-packages": "cd packages/types && ncu -u && cd ../components && ncu -u && cd ../documentation && ncu -u && cd ../utils && ncu -u",
     "dev:types": "cd packages/types && bun run build && bun run types && clear",
     "dev:components": "cd packages/components && bun run build && bun run types && clear",
     "dev:documentation": "cd packages/documentation && bun run dev",
+    "dev:utils": "cd packages/utils && bun run build && bun run types",
     "prod:documentation": "cd packages/documentation && bun run build && bun run start"
   },
   "workspaces": [
