--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "bunx vite build",
+    "build": "bunx tsc --project tsconfig.json --outDir ./dist",
     "types": "bunx tsc",
     "version": "bunx version patch"
   },
