--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -14,8 +14,7 @@
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
     "bun-types": "latest",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.8"
+    "typescript": "^5.4.5"
   },
   "peerDependencies": {
     "@remix-run/react": "^2.8.0",
