feat: add typecheck in packages

--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "scripts": {
     "all:update-packages": "cd packages/types && ncu -u && cd ../components && ncu -u && cd ../documentation && ncu -u && cd ../utils && ncu -u",
+    "all:typecheck": "bun run typecheck:types && bun run typecheck:server && bun run typecheck:shared && bun run typecheck:components",
     "dev:components": "cd packages/components && bun run build",
     "dev:documentation": "cd packages/documentation && bun run dev",
     "dev:server": "cd packages/server && bun run build",
     "dev:shared": "cd packages/shared && bun run build",
     "dev:types": "cd packages/types && bun run build",
+    "typecheck:components": "cd packages/components && bun run typecheck",
+    "typecheck:server": "cd packages/server && bun run typecheck",
+    "typecheck:shared": "cd packages/shared && bun run typecheck",
+    "typecheck:types": "cd packages/types && bun run typecheck",
     "prod:documentation": "cd packages/documentation && bun run build && bun run start"
   },
   "workspaces": [
