--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -5,7 +5,7 @@
     "declarationMap": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "lib": ["ESNext", "DOM", "ES2022"],
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "moduleResolution": "node",
     "outDir": "./dist",
