--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@flydotio/dockerfile": "latest"
   },
   "scripts": {
-    "all:update-packages": "cd packages/types && ncu -u && cd ../components && ncu -u && cd ../documentation && ncu -u && cd ../utils && ncu -u",
+    "all:update-packages": "cd ./packages/components && cd ../documentation && ncu -u && ncu -u && cd ../server && ncu -u && cd ../shared && ncu -u && cd ../types && ncu -u",
     "all:typecheck": "bun run typecheck:types && bun run typecheck:server && bun run typecheck:shared && bun run typecheck:components",
     "dev:components": "cd packages/components && bun run build",
     "dev:documentation": "cd packages/documentation && bun run dev",
