chore: Add arkyn/api library, with connection to the inbox flow api, to control remix website information with apis, corrections and additions of types in the arkyn/types library

--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -13,6 +13,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@arkyn/api": "workspace:*",
     "@arkyn/components": "workspace:*",
     "@arkyn/types": "workspace:*",
     "@arkyn/server": "workspace:*",
