--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "devDependencies": {
+    "@arkyn/api": "workspace:*",
     "@arkyn/components": "workspace:*",
     "@arkyn/types": "workspace:*",
     "@arkyn/server": "workspace:*",
@@ -10,13 +11,15 @@
     "@flydotio/dockerfile": "latest"
   },
   "scripts": {
-    "all:update-packages": "cd ./packages/components && cd ../documentation && ncu -u && ncu -u && cd ../server && ncu -u && cd ../shared && ncu -u && cd ../types && ncu -u",
-    "all:typecheck": "bun run typecheck:types && bun run typecheck:server && bun run typecheck:shared && bun run typecheck:components",
+    "all:update-packages": "cd ./packages/api && ncu -u && cd ../components && ncu -u && cd ../documentation && ncu -u && ncu -u && cd ../server && ncu -u && cd ../shared && ncu -u && cd ../types && ncu -u",
+    "all:typecheck": "bun run typecheck:types && bun run typecheck:server && bun run typecheck:shared && bun run typecheck:components && bun run typecheck:api",
+    "dev:api": "cd packages/api && bun run build",
     "dev:components": "cd packages/components && bun run build",
     "dev:documentation": "cd packages/documentation && bun run dev",
     "dev:server": "cd packages/server && bun run build",
     "dev:shared": "cd packages/shared && bun run build",
     "dev:types": "cd packages/types && bun run build",
+    "typecheck:api": "cd packages/api && bun run typecheck",
     "typecheck:components": "cd packages/components && bun run typecheck",
     "typecheck:server": "cd packages/server && bun run typecheck",
     "typecheck:shared": "cd packages/shared && bun run typecheck",
