--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@flydotio/dockerfile": "latest"
   },
   "scripts": {
-    "all:update-packages": "cd ./packages/api && ncu -u && cd ../components && ncu -u && cd ../documentation && ncu -u && ncu -u && cd ../server && ncu -u && cd ../shared && ncu -u && cd ../types && ncu -u",
+    "all:update-packages": "cd ./packages/api && ncu -u && cd ../components && ncu -u && cd ../documentation && ncu -u && cd ../server && ncu -u && cd ../shared && ncu -u && cd ../types && ncu -u",
     "all:typecheck": "bun run typecheck:types && bun run typecheck:server && bun run typecheck:shared && bun run typecheck:components && bun run typecheck:api",
     "dev:api": "cd packages/api && bun run build",
     "dev:components": "cd packages/components && bun run build",
