chore: create formController and formError component, switch react-input-mask component to @react-inputmask

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -17,11 +17,11 @@
   },
   "peerDependencies": {
     "@arkyn/types": "workspace:*",
+    "@react-input/mask": "^1.1.1",
     "@remix-run/react": "^2.8.0",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.349.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-input-mask": "^2.0.4"
+    "react-dom": "^18.2.0"
   }
 }
