--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.4.5"
   },
   "peerDependencies": {
+    "@react-input/mask": "^1.1.1",
     "@remix-run/react": "^2.8.0",
     "lucide-react": "^0.349.0",
     "react": "^18.2.0",
