--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -29,7 +29,8 @@
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.1",
