--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arkyn/components",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "./dist/bundle.js",
   "module": "./src/index.ts",
   "type": "module",
@@ -10,17 +10,17 @@
     "typecheck": "bunx tsc --project tsconfig.json --noEmit"
   },
   "devDependencies": {
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
+    "@types/react": ">=18.2.79",
+    "@types/react-dom": ">=18.2.25",
     "bun-types": "latest",
-    "typescript": "^5.4.5"
+    "typescript": ">=5.4.5"
   },
   "peerDependencies": {
-    "@react-input/mask": "^1.1.1",
-    "@remix-run/react": "^2.8.0",
-    "framer-motion": "^11.0.8",
-    "lucide-react": "^0.349.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@react-input/mask": ">=1.1.1",
+    "@remix-run/react": ">=2.8.0",
+    "framer-motion": ">=11.0.8",
+    "lucide-react": ">=0.349.0",
+    "react": ">=18.2.0",
+    "react-dom": ">=18.2.0"
   }
 }
