--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,19 +1,20 @@
 {
   "name": "@arkyn/components",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "main": "./dist/bundle.js",
   "module": "./src/index.ts",
   "type": "module",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "bunx tsc --project tsconfig.json",
+    "build": "bunx vite build && bunx tsc --project tsconfig.json",
     "typecheck": "bunx tsc --project tsconfig.json --noEmit"
   },
   "devDependencies": {
     "@types/react": ">=18.2.79",
     "@types/react-dom": ">=18.2.25",
     "bun-types": "latest",
-    "typescript": ">=5.4.5"
+    "typescript": ">=5.4.5",
+    "vite": "^5.2.2"
   },
   "peerDependencies": {
     "@react-input/mask": ">=1.1.1",
