--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -14,7 +14,8 @@
     "strict": true,
     "target": "ESNext",
     "types": ["bun-types"],
-    "verbatimModuleSyntax": true
+    "verbatimModuleSyntax": true,
+    "allowSyntheticDefaultImports": true
   },
   "exclude": ["dist", "node_modules"],
   "include": ["src/**/*.ts", "src/**/*.tsx"]
