--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -4,7 +4,7 @@
     "declarationDir": "./dist",
     "declarationMap": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "moduleResolution": "node",
