--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@arkyn/components",
-  "version": "1.0.6",
-  "main": "./dist/bundle.js",
+  "version": "1.0.7",
+  "main": "./dist/index.js",
   "module": "./src/index.ts",
   "type": "module",
   "types": "./dist/index.d.ts",
