--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@arkyn/components",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "main": "./dist/index.js",
   "module": "./src/index.ts",
   "type": "module",
+  "exports": {
+    "./": "./dist/index.js"
+  },
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "bunx tsc --project tsconfig.json",
