--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@arkyn/components",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "main": "./dist/index.js",
   "module": "./src/index.ts",
   "type": "module",
   "exports": {
-    "./": "./dist/index.js"
+    ".": "./dist/index.js"
   },
   "types": "./dist/index.d.ts",
   "scripts": {
