--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -4,10 +4,10 @@
     "declarationDir": "./dist",
     "declarationMap": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react",
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "Bundler",
     "outDir": "./dist",
     "preserveWatchOutput": true,
     "skipLibCheck": true,
