--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@arkyn/components",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "main": "./dist/index.js",
   "module": "./src/index.ts",
   "type": "module",
   "exports": {
-    ".": "./dist/index.js"
+    "import": "./dist/index.js",
+    "require": "./dist/index.js"
   },
   "types": "./dist/index.d.ts",
   "scripts": {
