--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@arkyn/components",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "main": "./dist/bundle.js",
   "types": "./dist/index.d.ts",
   "module": "./src/index.ts",
   "type": "module",
   "scripts": {
-    "build": "npx vite build && tsc --project tsconfig.json",
+    "build": "npx vite build && tsc",
     "typecheck": "bunx tsc --project tsconfig.json --noEmit"
   },
   "devDependencies": {
@@ -14,7 +14,7 @@
     "@types/react-dom": ">=18.2.25",
     "bun-types": "latest",
     "typescript": ">=5.4.5",
-    "vite": "^5.2.11"
+    "vite": "^5.1.0"
   },
   "peerDependencies": {
     "@react-input/mask": ">=1.1.1",
