--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,20 +1,21 @@
 {
   "name": "@arkyn/components",
-  "version": "1.1.1",
-  "main": "./dist/bundle.js",
+  "version": "1.1.3",
+  "exports": {
+    ".": "./dist/index.js"
+  },
   "types": "./dist/index.d.ts",
   "module": "./src/index.ts",
   "type": "module",
   "scripts": {
-    "build": "npx vite build && tsc",
+    "build": "rm -rf dist && bunx tsc --project tsconfig.json",
     "typecheck": "bunx tsc --project tsconfig.json --noEmit"
   },
   "devDependencies": {
     "@types/react": ">=18.2.79",
     "@types/react-dom": ">=18.2.25",
     "bun-types": "latest",
-    "typescript": ">=5.4.5",
-    "vite": "^5.1.0"
+    "typescript": ">=5.4.5"
   },
   "peerDependencies": {
     "@react-input/mask": ">=1.1.1",
