fix: attempt to fix error when importing the components lib

--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -15,7 +15,7 @@
     "noUnusedParameters": false,
     "preserveWatchOutput": true,
     "skipLibCheck": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "lib": ["dom", "ESNext"],
     "module": "ESNext",
     "target": "ESNext"
