--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,28 +1,27 @@
 {
   "name": "@arkyn/components",
-  "version": "1.1.4",
-  "exports": {
-    ".": "./dist/index.js"
-  },
-  "types": "./dist/index.d.ts",
+  "version": "1.1.0",
+  "main": "./dist/bundle.js",
   "module": "./src/index.ts",
   "type": "module",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "rm -rf dist && bunx tsc --project tsconfig.json",
+    "build": "bunx vite build && tsc",
     "typecheck": "bunx tsc --project tsconfig.json --noEmit"
   },
-  "devDependencies": {
-    "@types/react": ">=18.3.1",
-    "@types/react-dom": ">=18.3.0",
-    "bun-types": "latest",
-    "typescript": ">=5.4.5"
-  },
-  "peerDependencies": {
+  "dependencies": {
     "@react-input/mask": ">=1.1.1",
     "@remix-run/react": ">=2.8.0",
     "framer-motion": ">=11.0.8",
     "lucide-react": ">=0.349.0",
     "react": ">=18.2.0",
     "react-dom": ">=18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": ">=18.3.1",
+    "@types/react-dom": ">=18.3.0",
+    "bun-types": "latest",
+    "typescript": ">=5.4.5",
+    "vite": "^5.1.0"
   }
 }
