--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "scripts": {
     "all:update-packages": "cd ./packages/api && ncu -u && cd ../components && ncu -u && cd ../documentation && ncu -u && cd ../server && ncu -u && cd ../shared && ncu -u && cd ../types && ncu -u",
     "all:typecheck": "bun run typecheck:types && bun run typecheck:server && bun run typecheck:shared && bun run typecheck:components && bun run typecheck:api",
+    "all:dev": "bun run dev:api && bun run dev:components && bun run dev:server && bun run dev:shared && bun run dev:types",
+    "all:prod": "bun run prod:api && bun run prod:components && bun run prod:server && bun run prod:shared && bun run prod:types",
     "dev:api": "cd packages/api && bun run build",
     "dev:components": "cd packages/components && bun run build",
     "dev:documentation": "cd packages/documentation && bun run dev",
