--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,7 +14,6 @@
     "typescript": ">=5.4.5"
   },
   "peerDependencies": {
-    "redis": ">=4.6.13",
-    "typescript": ">=5.0.0"
+    "redis": ">=4.6.13"
   }
 }
