--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -11,9 +11,6 @@
   },
   "devDependencies": {
     "bun-types": "latest",
-    "typescript": "^5.4.5"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": ">=5.4.5"
   }
 }
