--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -9,17 +9,17 @@
     "build": "bunx tsc --project tsconfig.json",
     "typecheck": "bunx tsc --project tsconfig.json --noEmit"
   },
-  "devDependencies": {
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
-    "bun-types": "latest",
-    "typescript": "^5.4.5"
-  },
-  "peerDependencies": {
+  "dependencies": {
     "@react-input/mask": ">=1.1.1",
     "@remix-run/react": ">=2.8.0",
     "lucide-react": ">=0.349.0",
     "react": ">=18.2.0",
     "react-dom": ">=18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
+    "bun-types": "latest",
+    "typescript": "^5.4.5"
   }
 }
