--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arkyn",
-  "version": "1.0.1",
+  "version": "1.2.0",
   "type": "module",
   "devDependencies": {
     "@arkyn/api": "workspace:*",
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "all:update-packages": "cd ./packages/api && ncu -u && cd ../components && ncu -u && cd ../documentation && ncu -u && cd ../server && ncu -u && cd ../shared && ncu -u && cd ../types && ncu -u",
+    "all:update-versions": "npm version patch && cd ./packages/api && npm version patch && cd ../components && npm version patch && cd ../documentation && npm version patch && cd ../server && npm version patch && cd ../shared && npm version patch && cd ../types && npm version patch",
     "all:typecheck": "bun run typecheck:types && bun run typecheck:server && bun run typecheck:shared && bun run typecheck:components && bun run typecheck:api",
     "all:dev": "bun run dev:api && bun run dev:components && bun run dev:server && bun run dev:shared && bun run dev:types",
     "all:prod": "bun run prod:api && bun run prod:components && bun run prod:server && bun run prod:shared && bun run prod:types",
