fix: correct input type masked

--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "all:update-packages": "cd ./packages/api && ncu -u && cd ../components && ncu -u && cd ../documentation && ncu -u && cd ../server && ncu -u && cd ../shared && ncu -u && cd ../types && ncu -u",
     "all:update-versions": "cd ./packages/api && npm version patch && cd ../components && npm version patch && cd ../documentation && npm version patch && cd ../server && npm version patch && cd ../shared && npm version patch && cd ../types && npm version patch",
     "all:typecheck": "bun run typecheck:types && bun run typecheck:server && bun run typecheck:shared && bun run typecheck:components && bun run typecheck:api",
-    "all:dev": "bun run dev:api && bun run dev:components && bun run dev:server && bun run dev:shared && bun run dev:types",
+    "all:build": "bun run build:api && bun run build:components && bun run build:server && bun run build:shared && bun run build:types",
     "all:prod": "bun run prod:api && bun run prod:components && bun run prod:server && bun run prod:shared && bun run prod:types",
-    "dev:api": "cd packages/api && bun run build",
-    "dev:components": "cd packages/components && bun run build",
     "dev:documentation": "cd packages/documentation && bun run dev",
-    "dev:server": "cd packages/server && bun run build",
-    "dev:shared": "cd packages/shared && bun run build",
-    "dev:types": "cd packages/types && bun run build",
+    "build:api": "cd packages/api && bun run build",
+    "build:components": "cd packages/components && bun run build",
+    "build:server": "cd packages/server && bun run build",
+    "build:shared": "cd packages/shared && bun run build",
+    "build:types": "cd packages/types && bun run build",
     "typecheck:api": "cd packages/api && bun run typecheck",
     "typecheck:components": "cd packages/components && bun run typecheck",
     "typecheck:server": "cd packages/server && bun run typecheck",
