--- a/packages/documentation/package.json
+++ b/packages/documentation/package.json
@@ -33,7 +33,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "latest",
     "@remix-run/dev": "^2.9.2",
+    "@types/prismjs": "^1.26.4",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "@types/react-scroll": "^1.8.10",
@@ -46,7 +48,6 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "@types/prismjs": "^1.26.4",
     "remix-development-tools": "^4.1.6",
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
