fix: Correct module export in package.json in all packages

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -4,6 +4,7 @@
   "main": "./dist/bundle.js",
   "types": "./dist/index.d.ts",
   "author": "Lucas Gonçalves",
+  "module": "./dist/index.js",
   "type": "module",
   "private": false,
   "scripts": {
