--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,7 +2,7 @@
   "name": "@arkyn/api",
   "version": "1.3.17",
   "main": "./dist/bundle.js",
-  "module": "./src/index.ts",
+  "module": "./dist/index.js",
   "type": "module",
   "types": "./dist/index.d.ts",
   "scripts": {
