--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,12 +10,10 @@
     "typecheck": "bunx tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
-    "@remix-run/node": ">=2.9.2",
-    "uuid": "^10.0.0"
+    "@remix-run/node": ">=2.9.2"
   },
   "devDependencies": {
     "bun-types": "latest",
-    "typescript": "^5.5.2",
-    "@types/uuid": "^10.0.0"
+    "typescript": "^5.5.2"
   }
 }
