--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@arkyn/types": "workspace:*"
   },
   "scripts": {
-    "all:update-packages": "cd ./packages/api && ncu -u && cd ../components && ncu -u && cd ../documentation && ncu -u && cd ../server && ncu -u && cd ../shared && ncu -u && cd ../types && ncu -u",
+    "all:update-packages": "cd ./packages/api && bun update && cd ../components && bun update && cd ../documentation && bun update && cd ../server && bun update && cd ../shared && bun update && cd ../types && bun update",
     "all:update-versions": "cd ./packages/api && npm version patch && cd ../components && npm version patch && cd ../documentation && npm version patch && cd ../server && npm version patch && cd ../shared && npm version patch && cd ../types && npm version patch",
     "all:typecheck": "bun run typecheck:types && bun run typecheck:server && bun run typecheck:shared && bun run typecheck:components && bun run typecheck:api",
     "all:build": "bun run build:api && bun run build:components && bun run build:server && bun run build:shared && bun run build:types",
