--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,9 +11,9 @@
   },
   "devDependencies": {
     "bun-types": "latest",
-    "typescript": ">=5.5.2"
+    "typescript": "^5.5.4"
   },
   "peerDependencies": {
-    "redis": ">=4.6.13"
+    "redis": "^4.6.13"
   }
 }
