--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -15,6 +15,6 @@
   "devDependencies": {
     "@types/uuid": "^10.0.0",
     "bun-types": "latest",
-    "typescript": ">=5.5.2"
+    "typescript": "^5.5.4"
   }
 }
