--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -10,16 +10,16 @@
     "typecheck": "bunx tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
-    "@react-input/mask": ">=1.2.5",
-    "@remix-run/react": ">=2.9.2",
-    "lucide-react": ">=0.396.0",
-    "react": ">=18.3.1",
-    "react-dom": ">=18.3.1"
+    "@react-input/mask": "^1.2.5",
+    "@remix-run/react": "^2.11.0",
+    "lucide-react": "^0.424.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "bun-types": "latest",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.4"
   }
 }
