--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arkyn/components",
-  "version": "1.3.89",
+  "version": "1.3.90",
   "main": "./dist/bundle.js",
   "types": "./dist/index.d.ts",
   "author": "Lucas Gonçalves",
@@ -15,6 +15,7 @@
     "@react-input/mask": "^1.2.5",
     "framer-motion": "^11.3.21",
     "lucide-react": "^0.424.0",
+    "react-scroll": "^1.9.0",
     "sonner": "^1.5.0"
   },
   "peerDependencies": {
