feat: created GoogleSearchPlaces component

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arkyn/types",
-  "version": "1.3.96",
+  "version": "1.3.97",
   "main": "./dist/bundle.js",
   "module": "./src/index.ts",
   "type": "module",
@@ -10,6 +10,7 @@
     "typecheck": "bunx tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
     "@react-input/mask": "^1.2.5",
     "@remix-run/react": "^2.11.0",
     "lucide-react": "^0.424.0",
