--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arkyn/components",
-  "version": "1.3.120",
+  "version": "1.3.124",
   "main": "./dist/bundle.js",
   "types": "./dist/index.d.ts",
   "author": "Lucas Gonçalves",
@@ -14,13 +14,14 @@
     "@react-google-maps/api": "^2.19.3",
     "@react-input/mask": "^1.2.5",
     "framer-motion": "^11.3.21",
+    "html-react-parser": "^5.1.16",
     "is-hotkey": "^0.2.0",
     "lucide-react": "^0.424.0",
+    "react-hot-toast": "^2.4.1",
     "react-scroll": "^1.9.0",
     "slate": "^0.103.0",
     "slate-history": "^0.109.0",
-    "slate-react": "^0.110.1",
-    "sonner": "^1.5.0"
+    "slate-react": "^0.110.1"
   },
   "peerDependencies": {
     "@remix-run/react": "^2.9.2",
