refactor(scripts): remove documentation package references
- Remove 'documentation' package from update and version scripts
- Remove 'dev:documentation' and 'prod:documentation' scripts
- Update 'all:update-packages' and 'all:update-versions' scripts to exclude documentation package

--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "@arkyn/types": "workspace:*"
   },
   "scripts": {
-    "all:update-packages": "cd ./packages/api && bun update && cd ../components && bun update && cd ../documentation && bun update && cd ../server && bun update && cd ../shared && bun update && cd ../types && bun update",
-    "all:update-versions": "cd ./packages/api && npm version patch --legacy-peer-deps && cd ../components && npm version patch --legacy-peer-deps && cd ../documentation && npm version patch --legacy-peer-deps && cd ../server && npm version patch --legacy-peer-deps && cd ../shared && npm version patch --legacy-peer-deps && cd ../types && npm version patch --legacy-peer-deps",
+    "all:update-packages": "cd ./packages/api && bun update && cd ../components && bun update && cd ../server && bun update && cd ../shared && bun update && cd ../types && bun update",
+    "all:update-versions": "cd ./packages/api && npm version patch --legacy-peer-deps && cd ../components && npm version patch --legacy-peer-deps cd ../server && npm version patch --legacy-peer-deps && cd ../shared && npm version patch --legacy-peer-deps && cd ../types && npm version patch --legacy-peer-deps",
     "all:typecheck": "bun run typecheck:types && bun run typecheck:server && bun run typecheck:shared && bun run typecheck:components && bun run typecheck:api",
     "all:build": "bun run build:api && bun run build:components && bun run build:server && bun run build:shared && bun run build:types",
     "all:prod": "bun run prod:api && bun run prod:components && bun run prod:server && bun run prod:shared && bun run prod:types",
-    "dev:documentation": "cd packages/documentation && bun run dev",
     "build:api": "cd packages/api && bun run build",
     "build:components": "cd packages/components && bun run build",
     "build:server": "cd packages/server && bun run build",
@@ -28,7 +27,6 @@
     "typecheck:types": "cd packages/types && bun run typecheck",
     "prod:api": "cd packages/api && npm publish",
     "prod:components": "cd packages/components && npm publish",
-    "prod:documentation": "cd packages/documentation && bun run build && bun run start",
     "prod:server": "cd packages/server && npm publish",
     "prod:shared": "cd packages/shared && npm publish",
     "prod:types": "cd packages/types && npm publish",
