--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arkyn/types",
-  "version": "1.3.155",
+  "version": "1.3.156",
   "main": "./dist/bundle.js",
   "module": "./src/index.ts",
   "type": "module",
@@ -15,7 +15,8 @@
     "@remix-run/react": "^2.15.0",
     "lucide-react": "^0.424.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
