--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,7 +10,9 @@
     "typecheck": "bunx tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
-    "@remix-run/node": "^2.15.0"
+    "@aws-sdk/client-s3": "^3.703.0",
+    "@remix-run/node": "^2.15.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "bun-types": "latest",
