--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/is-hotkey": "^0.1.10",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "bun-types": "latest",
