--- a/package.json
+++ b/package.json
@@ -7,28 +7,32 @@
     "@arkyn/components": "workspace:*",
     "@arkyn/server": "workspace:*",
     "@arkyn/shared": "workspace:*",
+    "@arkyn/templates": "workspace:*",
     "@arkyn/types": "workspace:*"
   },
   "scripts": {
-    "all:update-packages": "cd ./packages/api && bun update && cd ../components && bun update && cd ../server && bun update && cd ../shared && bun update && cd ../types && bun update",
-    "all:update-versions": "cd ./packages/api && npm version patch --legacy-peer-deps && cd ../components && npm version patch --legacy-peer-deps && cd ../server && npm version patch --legacy-peer-deps && cd ../shared && npm version patch --legacy-peer-deps && cd ../types && npm version patch --legacy-peer-deps",
+    "all:update-packages": "cd ./packages/api && bun update && cd ../components && bun update && cd ../server && bun update && cd ../shared && bun update && cd ../templates && bun update && cd ../types && bun update",
+    "all:update-versions": "cd ./packages/api && npm version patch --legacy-peer-deps && cd ../components && npm version patch --legacy-peer-deps && cd ../server && npm version patch --legacy-peer-deps && cd ../shared && npm version patch --legacy-peer-deps && cd ../templates && npm version patch --legacy-peer-deps && cd ../types && npm version patch --legacy-peer-deps && rm -rf package-lock.json",
     "all:typecheck": "bun run typecheck:types && bun run typecheck:server && bun run typecheck:shared && bun run typecheck:components && bun run typecheck:api",
-    "all:build": "bun run build:api && bun run build:components && bun run build:server && bun run build:shared && bun run build:types",
-    "all:prod": "bun run prod:api && bun run prod:components && bun run prod:server && bun run prod:shared && bun run prod:types",
+    "all:build": "bun run build:api && bun run build:components && bun run build:server && bun run build:shared && bun run build:templates && bun run build:types",
+    "all:prod": "bun run prod:api && bun run prod:components && bun run prod:server && bun run prod:shared && bun run prod:templates && bun run prod:types",
     "build:api": "cd packages/api && bun run build",
     "build:components": "cd packages/components && bun run build",
     "build:server": "cd packages/server && bun run build",
     "build:shared": "cd packages/shared && bun run build",
+    "build:templates": "cd packages/templates && bun run build",
     "build:types": "cd packages/types && bun run build",
     "typecheck:api": "cd packages/api && bun run typecheck",
     "typecheck:components": "cd packages/components && bun run typecheck",
     "typecheck:server": "cd packages/server && bun run typecheck",
     "typecheck:shared": "cd packages/shared && bun run typecheck",
+    "typecheck:templates": "cd packages/templates && bun run typecheck",
     "typecheck:types": "cd packages/types && bun run typecheck",
     "prod:api": "cd packages/api && npm publish",
     "prod:components": "cd packages/components && npm publish",
     "prod:server": "cd packages/server && npm publish",
     "prod:shared": "cd packages/shared && npm publish",
+    "prod:templates": "cd packages/templates && npm publish",
     "prod:types": "cd packages/types && npm publish",
     "ccm": "./auto_commit.sh"
   },
