--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -4,7 +4,7 @@
     "declarationDir": "./dist",
     "declarationMap": true,
     "isolatedModules": true,
-    "lib": ["ESNext", "DOM.Iterable"],
+    "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "module": "ESNext",
     "moduleResolution": "node",
     "outDir": "./dist",
