--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -5,7 +5,7 @@
     "declarationDir": "./dist",
     "declarationMap": true,
     "isolatedModules": true,
-    "lib": ["ESNext", "DOM.Iterable"],
+    "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "module": "ESNext",
     "moduleResolution": "node",
     "outDir": "./dist",
