--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "all:update-packages": "cd ./packages/api && bun update && cd ../components && bun update && cd ../server && bun update && cd ../shared && bun update && cd ../templates && bun update && cd ../types && bun update",
-    "all:update-versions": "cd ./packages/api && npm version patch --legacy-peer-deps && cd ../components && npm version patch --legacy-peer-deps && cd ../server && npm version patch --legacy-peer-deps && cd ../shared && npm version patch --legacy-peer-deps && cd ../templates && npm version patch --legacy-peer-deps && cd ../types && npm version patch --legacy-peer-deps && rm -rf package-lock.json",
+    "all:update-versions": "cd ./packages/api && npm version patch --legacy-peer-deps && cd ../components && npm version patch --legacy-peer-deps && cd ../server && npm version patch --legacy-peer-deps && cd ../shared && npm version patch --legacy-peer-deps && cd ../templates && npm version patch --legacy-peer-deps && cd ../types && npm version patch --legacy-peer-deps",
     "all:typecheck": "bun run typecheck:types && bun run typecheck:server && bun run typecheck:shared && bun run typecheck:components && bun run typecheck:api",
     "all:build": "bun run build:api && bun run build:components && bun run build:server && bun run build:shared && bun run build:templates && bun run build:types",
     "all:prod": "bun run prod:api && bun run prod:components && bun run prod:server && bun run prod:shared && bun run prod:templates && bun run prod:types",
