--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "all:update-packages": "cd packages/components && bun update && cd ../server && bun update && cd ../shared && bun update && cd ../templates && bun update && cd ../types && bun update",
     "all:update-versions": "cd ../components && npm version patch --legacy-peer-deps && cd ../server && npm version patch --legacy-peer-deps && cd ../shared && npm version patch --legacy-peer-deps && cd ../templates && npm version patch --legacy-peer-deps && cd ../types && npm version patch --legacy-peer-deps",
     "all:typecheck": "bun run typecheck:types && bun run typecheck:server && bun run typecheck:shared && bun run typecheck:components",
-    "all:build": "bun run build:templates && bun run build:types && bun run build:api && bun run build:components && bun run build:server && bun run build:shared",
+    "all:build": "bun run build:templates && bun run build:types && bun run build:api && bun run build:components && bun run build:shared && bun run build:server",
     "all:beta": "bun run beta:components && bun run beta:server && bun run beta:shared && bun run beta:templates && bun run beta:types",
     "all:prod": "bun run prod:components && bun run prod:server && bun run prod:shared && bun run prod:templates && bun run prod:types",
     "all:test": "bun run test:shared && bun run test:server",
