refactor: update auto-commit script and add new type export
- Rename auto_commit.sh to autocommit.sh in package.json script
- Remove auto_commit.sh file
- Add export for stripHtmlTags function in types package

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "prod:shared": "cd packages/shared && npm publish --tag latest",
     "prod:templates": "cd packages/templates && npm publish --tag latest",
     "prod:types": "cd packages/types && npm publish --tag latest",
-    "ccm": "./auto_commit.sh",
+    "ccm": "./autocommit.sh",
     "dev:components": "cd packages/newComponents && bun run dev"
   },
   "type": "module",
